# MindForge

./: .editorconfig  .env.example  .envrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATIVE_ANALYZER_SUMMARY.md  CREATIVE_PROJECTS_README.md  Dockerfile  LICENSE  Makefile  README.md  commitlint.config.js  debug.py  demo_creative_analyzer.py  demo_creator_intelligence.py  dev_start.sh  docker-compose.yml  eslint.config.js  example_usage.py  integration_test_reporting.py  launch-casey.command  merge_conflict_fixer.py  mindforge.db  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  run.sh  setup.sh  setup_debug.py  start-mac.sh  start_mindforge.sh  startup.sh  test_creative_router.py  (+2 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  preview.yml  release.yml
MindForge.app/Contents/: Info.plist
ai_core/: extraction_engine.py
apps/backend/: .env.example  __init__.py  app.py  database.py  db.py  main.py  (+7 more)
backend/: app.py  db.py  requirements.txt  schemas.py
docs/: README.md
frontend/: index.html  package.json
infra/: README.md
ops/: README.md
scalable_engine/: Cargo.toml
static/: styles.css
tests/: conftest.py  test_advanced_analyzer.py  test_collaboration.py  test_creative_analyzer.py  test_creative_analyzer_basic.py  test_creative_project_models.py  test_creator_business_intelligence.py  test_emotions.py  test_memory.py  test_parser.py  test_pdl.py  test_process_intelligence.py  test_project_questioner.py  test_workforce_matrix.py
(+111 files in other folders)
